panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_addressof_derefd_pointer_to_incomplete_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (p~2 `ptr<struct T~1>` @0) (noop-type-conversion `ptr<struct T~1>` @0 (nullptr `nullptr_t` @0)))
         (definition (q~3 `ptr<struct T~1>` @8)
            (addressof `ptr<struct T~1>` @8
               (deref `struct T~1` @8 (p~2 `ptr<struct T~1>` @0))))
         (return
            (ptr-equal `int` @16
               (p~2 `ptr<struct T~1>` @0)
               (q~3 `ptr<struct T~1>` @8))))))

----- stderr -----
