panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_compound_literal_as_null_pointer_constant.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c"
   (definition external (p1~0 `ptr<int>` (static p1)) (sign-extend `ptr<int>` (compound-literal `int` (definition external compound_literal.1~2 `int` (braced ∅)))))
   (function-definition external stack-size=40
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (definition external (compound_literal.1~2 `int` (static compound_literal.1)) (braced ∅))
         (definition (p2~5 `ptr<int>` @8) (sign-extend `ptr<int>` @8 (compound-literal `int` @0 (definition (compound_literal.6~7 `int` @0) (braced ∅)))))
         (return
            (logical-and `int` @16
               (ptr-equal `int` @16
                  (p1~0 `ptr<int>` (static p1))
                  (nullptr `nullptr_t` @24))
               (ptr-equal `int` @20
                  (p2~5 `ptr<int>` @8)
                  (nullptr `nullptr_t` @24)))))))

----- stderr -----
