panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_error_invalid_implicit_conversion_loses_const.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_error_invalid_implicit_conversion_loses_const.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: implicit conversion from `ptr<int const>` to `ptr<int>` drops qualifiers
   ╭─[panko/tests/cases/execute/pointers/test_error_invalid_implicit_conversion_loses_const.c:4:14]
   │
 4 │     int* p = &x;
   │              ─┬  
   │               ╰── this is of type `ptr<int const>`, which is more qualified than `ptr<int>`
───╯
