panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_implicit_conversion_between_pointers_to_different_but_compatible_types.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_implicit_conversion_between_pointers_to_different_but_compatible_types.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid implicit conversion from `ptr<array<int; 5>>` to `ptr<array<int const; 5>>`
   ╭─[panko/tests/cases/execute/pointers/test_implicit_conversion_between_pointers_to_different_but_compatible_types.c:9:32]
   │
 9 │     typeof(int const[5])* p2 = p1;
   │                                ─┬  
   │                                 ╰── this is of type `ptr<array<int; 5>>`, which cannot be implicitly converted to `ptr<array<int const; 5>>`
───╯
