panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__pointers__test_typeof_derefd_pointer_to_incomplete_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/pointers/test_typeof_derefd_pointer_to_incomplete_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_typeof_derefd_pointer_to_incomplete_type.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (p~3 `ptr<struct T~2>` @0) (noop-type-conversion `ptr<struct T~2>` @0 (nullptr `nullptr_t` @0)))
         (definition (q~4 `ptr<struct T~2>` @8) (p~3 `ptr<struct T~2>` @0))
         (definition (r~5 `ptr<struct T~2>` @16) (p~3 `ptr<struct T~2>` @0))
         (return
            (logical-and `int` @24
               (ptr-equal `int` @24
                  (p~3 `ptr<struct T~2>` @0)
                  (q~4 `ptr<struct T~2>` @8))
               (ptr-equal `int` @28
                  (p~3 `ptr<struct T~2>` @0)
                  (r~5 `ptr<struct T~2>` @16)))))))

----- stderr -----
